re-create and much improve documentation, now using sphinx

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 
+* use sphinx for documentation, improve docs and docstrings
+
 * fixes for standalone usage, adding boilerplate files
 
 * imported py/execnet and related bits 
