make tracing dependent on existence of EXECNET_DEBUG instead of module-global

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.0b2
+--------------------------------
+* setting the environment variable EXECNET_DEBUG will generate per
+  process trace-files for debugging
 
 1.0.0b1
 ----------------------------
