--- a/doc/install.txt
+++ b/doc/install.txt
@@ -2,7 +2,7 @@
 Installation
 ====================
 
-Install a public `pypi release`_ via `easy_install`_ or ``pip``::
+Install a public `pypi release`_ via `easy_install`_ or pip_::
 
     easy_install -U execnet
         
@@ -20,11 +20,12 @@ Next checkout the basic api and examples:
 .. toctree::
    :maxdepth: 1
 
-   basics
    examples
+   basics
    changelog
 
 .. _`easy_install`: http://peak.telecommunity.com/DevCenter/EasyInstall
+.. _pip: http://pypi.python.org/pypi/pip
 .. _`bitbucket repository`: http://bitbucket.org/hpk42/execnet/
 .. _`execnet mercurial repository`: http://bitbucket.org/hpk42/execnet/
 .. _`pypi release`: http://pypi.python.org/pypi/execnet
