--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+1.0.1 (pending)
+--------------------------------
+
+- have popen-gateways use imports instead of source-strings,
+  also improves debugging/tracebacks, as a side effect
+  popen-gateway startup can be substantially faster (>30%)
+
 1.0.0
 --------------------------------
 
