refine gateway termination such that proper and unexpected exits can be better distinguished:
- channel.receive and channel.waitclose() will now
  raise EOFError if the reading connection unexpectedly closed

- channel.send will raise an IOError if the writing connection
  is closed

- callback endmarkers are delivered on unexpected closes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,11 @@
 
 - fix group.terminate() termination to work (more reliably)
 
+- EOFError on channel.receive/waitclose if the other
+  side unexpectedly went away.  When a gateway exits 
+  it now internally sends an explicit termination message
+  instead of abruptly closing.  
+
 1.0.0
 --------------------------------
 
