refactor gateway termination and tests to allow for timely termination. It should now be more reliable and easy to properly terminate (a group of) gateways.
Sorry, ronny - a somewhat larger commit but it'd
be hard to split this up into smaller bits as
termination is a rather pervasive issue.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,9 @@
   also improves debugging/tracebacks, as a side effect
   popen-gateway startup can be substantially faster (>30%)
 
-- fix group.terminate() termination to work (more reliably)
+- refine internal gateway exit/termination procedure
+  and introduce group.terminate(timeout) for timely
+  termination. 
 
 - EOFError on channel.receive/waitclose if the other
   side unexpectedly went away.  When a gateway exits 
