refine group-membership handling: index by integer, don't use weakref because gateways do not work with implicit GC-related termination anyway (channels do, however).

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,8 @@
 
 - new: execnet.MultiChannel provides basic iteration/contain interface
 
+- new: execnet.Group can be indexed by integer
+
 - have popen-gateways use imports instead of source-strings,
   also improves debugging/tracebacks, as a side effect
   popen-gateway startup can be substantially faster (>30%)
