--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,11 @@
   anywhere in a data structure (i.e. as an item of a container type).
   Add according examples.
 
+- automatically close a channel when a remote callback raises 
+  an exception, makes communication more robust because until 
+  now failing callbacks rendered the receiverthread unuseable 
+  leaving the remote side in-accessible.
+
 - internally split socket gateways, speeds up popen-gateways
   by 10% (now at 30 milliseconds per-gateway on my 3-year old machine) 
 
