--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-1.x (pending)
+1.0.2 
 --------------------------------
 
 - generalize channel-over-channel sending: you can now have channels 
@@ -11,7 +11,7 @@
   leaving the remote side in-accessible.
 
 - internally split socket gateways, speeds up popen-gateways
-  by 10% (now at 30 milliseconds per-gateway on my 3-year old machine) 
+  by 10% (now at <50 milliseconds per-gateway on a 1.5 GHZ machine) 
 
 1.0.1
 --------------------------------
