refine termination to a) react on EOFErrors as if GATEWAY_TERMINATE was sent explicitely b) have gateway termination try harder to interrupt execution on slaves. Also CTRL-C should now cleanup local and remote processes better. this should fix http://bitbucket.org/hpk42/py-trunk/issue/71/interrupting-distributed-testing-does-not-clean-up-processes-on-the-remote.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,9 @@
 --------------------------------
 
 - Windows/python2.4: fix bug that killing subprocesses would fail
+- refine termination some more: CTRL-C and gateway.exit will 
+  now try harder to interrupt remote execution.  this 
+  helps to avoid left-over ssh-processes.
 
 1.0.2 
 --------------------------------
