try harder to avoid bogus tracebacks, aim at execnet-1.0.4

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.0.4
+--------------------------------
+
+- try harder to not have globals involved during finalization handling, 
+  this should (hopefully) fix bogus tracebacks at process exit. 
+
 1.0.3
 --------------------------------
 
