just silence shutdown related exceptions at receiver-thread end (sigh)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.0.4post1
+--------------------------------
+
+- silence receiver-thread finalization exceptions during interp-shutdown 
+- fix glitch in ssh-fileserver example 
+
 1.0.4
 --------------------------------
 
