try to ensure that a callback is called with the endmarker before channel.waitclose() can return in another thread. should fix the sometimes failing test_channel_endmarker_callback test.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 --------------------------------
 
 - fix jython/windows interactions 
+- fix waitclose/callback-with-endmarker race condition
 
 1.0.5
 --------------------------------
