add tox configuration

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -48,7 +48,8 @@ Next checkout the basic api and examples:
 .. _`bitbucket repository`: http://bitbucket.org/hpk42/execnet/
 .. _`execnet mercurial repository`: http://bitbucket.org/hpk42/execnet/
 .. _`pypi release`: http://pypi.python.org/pypi/execnet
-
+.. _setuptools: http://pypi.python.org/pypi/setuptools
+.. _distribute: http://pypi.python.org/pypi/distribute
 
 
 
