--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,16 @@
+1.0.7dev
+--------------------------------
+
+- try to avoid a random KeyboardInterrupt Error when threads
+  are ending. 
+
+1.0.6
+--------------------------------
+
+- fix jython/windows interactions 
+- fix waitclose/callback-with-endmarker race condition
+- fix race condition where multiple threads sending data over channels
+  would crash the serializer and process 
 1.0.6
 --------------------------------
 
