remove trailing whitespace everywhere

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.0.8
+--------------------------------
+
+- removed all trailing whitespace from source files
+
 1.0.7
 --------------------------------
 
