update apipkg usage

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 --------------------------------
 
 - removed all trailing whitespace from source files
+- update usage of apipkg to 1.0b6
 
 1.0.7
 --------------------------------
