--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,26 @@
 1.0.8
 --------------------------------
 
+- new ``gateway.remote_exec(func, **kwargs)`` style fo executing
+  a pure function with parameters.  The function on the remote
+  side also needs to accept a ``channel`` which allows it to
+  communicate back and forth.  Thanks to Ronny Pfannschmidt
+  for implementing it with special kudos to Maciej Fijalkowski
+  for writing a "pure-function" checker so that on Python2.6
+  onwards non-pure functions will be rejected.
+
 - enhance rsyncing to also sync permissions (stat().st_mode) 
   of directories and files. 
   (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/68/)
+
 - fix rsyncing of symlinks, thanks to Charles Solar 
   (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/70/)
-- update usage of apipkg to 1.0b6
+
+- update internal usage of apipkg to 1.0b6
+
 - remote_exec(module) now makes sure that the linecache is updated
   before reading and sending the source.  thanks Ronny, Matt. 
+
 - removed all trailing whitespace from source files
 
 1.0.7
