rename gw.setcoerce to reconfigure in order to prepare for future extensions

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,9 +8,9 @@
 - inline and remove Message.writeto/readfrom
 - refactor collection loading to avoid the indirection over tuple
 - remove the unused NamedThreadPool
-- add gw.setcoerce(py2str_as_py3str, py3str_as_py2str)
-  to configure per gateway string coercion
-
+- add gw.reconfigure to configure per gateways
+  currently it supports the boolean flags
+  py2str_as_py3str and py3str_as_py2str to configure string deserialization
 
 1.0.8
 --------------------------------
