--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 1.0.9.dev0
 --------------------------------
 
+- add gw.reconfigure to configure per gateways
+  currently it supports the boolean flags
+  py2str_as_py3str and py3str_as_py2str to configure string deserialization
+- channel.makefile() objects now have a isatty() returning False
 - refactor message types into received handler functions
 - refactor b(chr(opcode)) to bchr(opcode)
 - reorder Message ctor args, rename msgtype to msgcode
@@ -8,9 +12,7 @@
 - inline and remove Message.writeto/readfrom
 - refactor collection loading to avoid the indirection over tuple
 - remove the unused NamedThreadPool
-- add gw.reconfigure to configure per gateways
-  currently it supports the boolean flags
-  py2str_as_py3str and py3str_as_py2str to configure string deserialization
+
 
 1.0.8
 --------------------------------
