--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,9 @@
-1.0.10
+1.0.10.dev
 --------------------------------
 
 - added a ``dont_write_bytecode`` option to Popen gateways, this sets the
   ``sys.dont_write_bytecode`` flag on the spawned process, this only works on
-  CPython 2.6 and higher.
+  CPython 2.6 and higher.  Thanks to Alex Gaynor.
 
 1.0.9
 --------------------------------
