--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,9 @@
   DNS queries for unknown hosts actually are resolved as such (Thanks
   Alex Gaynor)
 
+- fix issue #2 - propperly reconfigure the channels string coercion for rsync,
+  so it can send from python2 to python3
+
 1.0.9
 --------------------------------
 
