--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 1.X
 --------------------------------
 
+- fix issue22 -- during interpreter shutdown don't throw
+  an exception when we can't send a termination sequence
+  anymore as we are about to die anyway.
+
 - fix issue24 -- allow concurrent creation of gateways
   by guarding automatic id creation by a look.
   Thanks tlecomte.
