fix issue33: index.txt now correctly states MIT instead of GPL.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+XXX
+--------------------------------
+
+- fix issue33: index.txt to correctly mention MIT instead of GPL.
+
 1.2
 --------------------------------
 
