--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,12 @@
 ----
 
 - de-vendor apipkg and use the pypi dependency instead
+
 - Fix issue38: provide ability to connect to Vagrant VMs easily and reliably.
+  Thanks Christian Theune.
+
+- add support for serializing the "complex" type. Thanks Sebastian
+  Koslowski.
 
 
 1.3
