--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,9 +2,12 @@
 ----
 
 - de-vendor apipkg and use the pypi dependency instead
+  (this also fixes the bpython interaction issues)
 
-- Fix issue38: provide ability to connect to Vagrant VMs easily and reliably.
-  Thanks Christian Theune.
+- Fix issue38: provide ability to connect to Vagrant VMs easily
+  using :code:`vagrant_ssh=defaut` or :code:`vagrant_ssh=machinename`
+  this feature is experimental and will be refined in future releases.
+  Thanks Christian Theune for the discussion and the initial pull request.
 
 - add support for serializing the "complex" type. Thanks Sebastian
   Koslowski.
